[package]
name = "degen-logger"
description = "Decent console logging for rust"
license = "MIT"
repository="https://github.com/ethereumdegen/degen-logging"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
